--- a/public/.htaccess
+++ b/public/.htaccess
@@ -18,4 +18,7 @@
     RewriteCond %{REQUEST_FILENAME} !-d
     RewriteCond %{REQUEST_FILENAME} !-f
     RewriteRule ^ index.php [L]
+    
+    php_value max_input_vars 5000
+
 </IfModule>
